# haze-weather-radio

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.yaml  hazeReceiver.py  hazeReciever.py  main.py  requirements.txt
.github/workflows/: build.yml
bundle/managed/: dictionary.json  userbulletins.json
bundle/managed/cgen/scenes/: crawl.xml  fullscreen.xml  program_passthrough.xml  standby.xml
bundle/managed/configs/: automations.xml  cgen-encoders.xml  cgen.xml  cwxr-feeds.xml  cwxr-output.xml  cwxr-readers.xml  cwxr-webhooks.xml  easnet.xml  feeds.xml  ivr.xml  output.xml  packages.xml  product_text.xml  products.xml  readers.xml  userBulletins.xml  webhooks.xml
bundle/managed/csv/: NWS_MARINE_ZONES.csv
bundle/webroot/: admin.html  banner.html  index.html  layout.css  login.html  site.webmanifest  styles.css
bundle/webroot/js/: accounts.js  alerts.js  app.js  automations.js  breakin.js  bulletins.js  cgen.js  daemon.js  dashboard.js  dictionary.js  feeds.js  login.js  logs.js  playlist.js  public.js  same.js  tts.js  wx.js
bundle/webroot/js/lib/: api.js  panel-ws.js  public-icons.js  session.js  ws-client.js
crates/haze/: Cargo.toml  build.rs
crates/haze-cap/: Cargo.toml
crates/haze-cap/src/: bridge.rs  lib.rs  main.rs  model.rs  parse.rs  poller.rs  stream.rs
crates/haze-cgen/: Cargo.toml  build.rs
crates/haze-cgen/src/: ancillary.rs  architecture.rs  atomic_file.rs  audio_routing.rs  bridge.rs  config.rs  graphics.rs  gst_backend.rs  gst_output_sink.rs  main.rs  media_pcm.rs  migration.rs  msdf_text.rs  native.rs  output_workers.rs  pipeline.rs  program_mapping.rs  scene.rs  scene_layout.rs  scene_runtime.rs  source_caps.rs  state.rs  sunny_cat.rs  wgpu_renderer.rs
crates/haze-easnet/: Cargo.toml
crates/haze-easnet/src/: main.rs
crates/haze-media/: Cargo.toml
crates/haze-media/src/: ffmpeg_runtime.rs  lib.rs  main.rs  pcm.rs
crates/haze-playout/: Cargo.toml
crates/haze-playout/src/: bridge.rs  config.rs  engine.rs  main.rs  sinks.rs
crates/haze/src/: daemon_services.rs  go_services.rs  host_bridge.rs  lib.rs  main.rs  runtime_dir.rs  same_cli.rs  same_core.rs  signals.rs  windows_service_host.rs
data/nws/: wwv.txt
data/weatherdotcom/: CWRJ.wx.json
docs/: accounts-security.md
managed/: CAP-CP_GEOCODES.csv  FORECAST_LOCATIONS.csv  SWOB_STATIONS.csv  __init__.py  dictionary.json  events.py  feeds.xml  packages.py  sameMapping.json  sameTemplate.json  sameTest.json  staticPhrases.json  userbulletins.json
managed/configs/: alertTemplates.xml  feeds.xml  packages.xml  readers.xml
managed/csv/: CAP-CP_Geocodes.csv  CLC_Base_Zone.csv  FORECAST_LOCATIONS.csv  NWS_ZONE_COUNTY_CORRELATION.csv  SWOB_STATIONS.csv
module/: __init__.py  alert.py  alert_templates.py  audio.py  banner.py  buffer.py  config.py  data.py  dictionary.py  events.py  feed_util.py  naads.py  output.py  packages.py  playlist.py  playout.py  queue.py  same.py  scheduler.py  static_phrases.py  text.py  tts.py  version.py  video.py  webhook.py  webserve.py
module/cap_specific/: example_SVR_NWS_WXR_T_XOUS51_C_KWBC_20260414001633_urn_oid_2.49.0.1.840.0.eb7c54df4660c8e1f4ffa9aa2d21497c108cf3b2.001.1-O-NEW-KCLE-SV-W-0063.xml  example_WSW_ECCC_WXR_2026_04_15T21_28_10_00_00Iurn_oid_2.49.0.1.124.4282049505.2026.xml  example_civilEmerg_AlertReady_2026_04_10T19_08_12_03_00IA99FB9E1_6FB6_4951_B234_863F1341C4C1.xml  naads_tcp.py  naadsatom_http.py  nwsatom_http.py
scripts/: build-go-services.ps1  build-go-services.sh  build-haze.ps1  build-haze.sh  haze-weather-radio.service  register-windows-service.ps1  setup-neural-tts.ps1  sync-portable-bundle.cmd  sync-portable-bundle.sh
scripts/tts/: chatterbox_infer.py  f5_infer.py  piper_worker.py
scripts/util/: mergeCLC_SGC.py  update_hello_weather_locations.py
scripts/util/csv_base/: HELLO_WEATHER_LOCATIONS.csv  postal-codes-canada.csv
services/go/: go.mod  go.sum
services/go/cmd/haze-cap-ingest/: main.go
services/go/cmd/haze-data-ingest/: main.go
services/go/cmd/haze-ivr/: main.go
services/go/cmd/haze-playlist/: main.go
services/go/cmd/haze-product-render/: main.go
services/go/cmd/haze-sapi5-shim/: main.go
services/go/cmd/haze-tts/: main.go  main_test.go
services/go/cmd/haze-web/: main.go  main_test.go
services/go/cmd/haze-webhook/: main.go
services/go/internal/alertmodel/: packet.go  packet_test.go
services/go/internal/alerttext/: banner.go  banner_test.go
services/go/internal/capingest/: parse.go  parse_test.go  poller.go  poller_test.go  types.go
services/go/internal/capmodel/: parse.go  parse_test.go  types.go
services/go/internal/capsame/: event.go  event_test.go
services/go/internal/dataingest/: service.go  service_test.go
services/go/internal/datastore/: forecast_payload.go  postgres.go  postgres_test.go  schema.go  sqlite.go
services/go/internal/events/: bridge.go  bridge_test.go  events.go
services/go/internal/ivr/: alerts.go  alerts_test.go  audio.go  audio_test.go  bridge.go  broadcast.go  broadcast_test.go  cache.go  config.go  prompts.go  prompts_test.go  resolver.go  resolver_test.go  service.go  service_test.go  sip.go  sip_test.go
services/go/internal/locationdb/: locationdb.go  locationdb_test.go
services/go/internal/playlist/: alerts.go  async.go  async_test.go  audio.go  audio_bench_test.go  bridge.go  config.go  same.go  service.go  service_test.go
services/go/internal/processguard/: parent.go  parent_unix.go  parent_windows.go
services/go/internal/productrender/: alerts.go  alerts_registry_test.go  alerts_same_test.go  bridge.go  bridge_test.go  config.go  config_test.go  live_data.go  maintenance.go  maintenance_test.go  models.go  renderer.go  renderer_test.go  service.go  service_test.go
webroot/: admin.html  banner.html  editor.html  editor.js  index.html  index.js  login.html  same-page.css  same.html  same.js  styles.css  wx.html  wx.js
webroot/js/: app.js  dashboard.js  editor.js  index.js  login.js  public.js  same.js  wx.js
webroot/js/lib/: api.js  audio.js  session.js  theme.js  ws-client.js
(+109 files in other folders)
