[workspace]
members = [
    "crates/haze",
    "crates/haze-cap",
    "crates/haze-cgen",
    "crates/haze-easnet",
    "crates/haze-media",
    "crates/haze-playout",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/meowraii/haze-weather-radio"
version = "0.1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 2
