[package]
name = "haze-cgen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "haze-cgen"
path = "src/main.rs"

[features]
default = []
ffmpeg-rsmpeg = ["haze-media/ffmpeg-rsmpeg", "dep:rsmpeg", "rsmpeg/link_system_ffmpeg"]
gpu-wgpu = ["dep:pollster", "dep:wgpu"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4", features = ["derive", "env"] }
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
pollster = { version = "0.4", optional = true }
wgpu = { version = "26", optional = true }
rsmpeg = { version = "0.18.0", default-features = false, features = ["ffmpeg8"], optional = true }

haze-media = { path = "../haze-media" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"
