[package]
name = "haze-cgen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "haze-cgen"
path = "src/main.rs"

[features]
default = []
gpu-wgpu = ["dep:bytemuck", "dep:fontdb", "dep:fontdue", "dep:pollster", "dep:wgpu"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4", features = ["derive", "env"] }
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
bytemuck = { version = "1", features = ["derive"], optional = true }
fontdb = { version = "0.23", optional = true }
fontdue = { version = "0.9", optional = true }
pollster = { version = "0.4", optional = true }
wgpu = { version = "26", optional = true }
gstreamer = "0.25.3"
gstreamer-app = "0.25.2"
gstreamer-audio = "0.25.3"
gstreamer-video = "0.25.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"
