[package]
name = "haze-cgen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[[bin]]
name = "haze-cgen"
path = "src/main.rs"

[features]
default = []
gpu-wgpu = [
    "dep:bytemuck",
    "dep:cosmic-text",
    "dep:glyphon",
    "dep:msdfgen",
    "dep:pollster",
    "dep:ttf-parser",
    "dep:wgpu",
]

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4", features = ["derive", "env"] }
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
bytemuck = { version = "1", features = ["derive"], optional = true }
cosmic-text = { version = "0.18.2", default-features = false, features = ["fontconfig", "std"], optional = true }
glyphon = { version = "0.11", optional = true }
msdfgen = { version = "0.2.1", default-features = false, features = ["ttf-parser"], optional = true }
pollster = { version = "0.4", optional = true }
ttf-parser = { version = "0.18.1", optional = true }
wgpu = { version = "29.0.3", default-features = false, features = ["std", "parking_lot", "vulkan", "wgsl"], optional = true }
gstreamer = "0.25.3"
gstreamer-app = "0.25.2"
gstreamer-audio = "0.25.3"
gstreamer-video = "0.25.3"
jpeg-encoder = "0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading"] }

# msdfgen-sys does not ship pre-generated Windows or FreeBSD bindings. These
# targets generate bindings during the build while still compiling the bundled
# C++ implementation into a static archive.
[target.'cfg(any(windows, target_os = "freebsd"))'.dependencies]
msdfgen = { version = "0.2.1", default-features = false, features = ["bindgen", "ttf-parser"], optional = true }

[dev-dependencies]
tempfile = "3"
