[package]
name = "haze-media"
description = "Unified media primitives and FFmpeg backend boundary for Haze Weather Radio"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "haze-media"
path = "src/main.rs"

[features]
default = []
ffmpeg-runtime = ["dep:libloading"]
# Kept as a source-compatible alias for older build commands. The runtime
# loader replaces the version-pinned rsmpeg status backend.
ffmpeg-rsmpeg = ["ffmpeg-runtime"]
gstreamer-backend = [
    "dep:gstreamer",
    "dep:gstreamer-app",
    "dep:gstreamer-audio",
]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
quick-xml = { version = "0.38", features = ["serialize"] }
hound = "3.5"
libloading = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
str0m = { version = "0.21", default-features = false, features = ["aws-lc-rs"] }
thiserror = "2.0"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
gstreamer = { version = "0.25.3", optional = true }
gstreamer-app = { version = "0.25.2", optional = true }
gstreamer-audio = { version = "0.25.3", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Media"] }
